--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,7 +10,7 @@
           <a class="nav-link" routerLink="">Home</a>
         </li>
         <li class="nav-item">
-          <a routerLinkActive="active" class="nav-link" [routerLink]="['/usuarios']">
+          <a routerLinkActive="active" class="nav-link" [routerLink]="['listausuarios']">
             <img src="/assets/images/icons/user1.png" class="mr-2" style="width: 30px">  Usuarios</a>
         </li>
         <li class="nav-item">
