--- a/src/app/usuario/usuario-list/usuario-list.component.html
+++ b/src/app/usuario/usuario-list/usuario-list.component.html
@@ -31,7 +31,7 @@
               </div>
               <div class="col-sm-2 col-xs-2"></div>
               <div class="col-sm-4 col-xs-4">
-                <a class="nav-link" [routerLink]="['/clube']">
+                <a class="nav-link" [routerLink]="['/usuario']">
                   <span tooltip="Adicionar Clube" placement="top" show-delay="500">
                     <img src="/assets/images/icons/add.png" class="mr-2" style="width: 30px"> Usuário
                     </span> 
@@ -66,7 +66,7 @@
                     </td>
                     <td>
                       <span [tooltip]="usuario.OBJ_CLUBE.CL_CLNOME" placement="top" show-delay="500">
-                        <img [src]="usuario.OBJ_CLUBE.CL_CLEMBLEMA" class="mr-2" style="width: 30px">
+                        <img [src]="usuario.OBJ_CLUBE.CL_CLEMBLEMA" class="mr-2" style="width: 20px">
                       </span>
                     </td>
                     <td>
@@ -82,7 +82,7 @@
                     </td>
                     <td><a class="nav-link exemplo_4"  (click)="ExcluiUsuario(usuario.US_USID);"> 
                       <span tooltip="Excluir" placement="top" show-delay="500">
-                        <img src="/assets/images/icons/excluir.png" class="mr-2" style="width: 20px" >
+                        <img src="/assets/images/icons/excluir.png" class="mr-2" style="width: 10px" >
                       </span> 
                       </a>
                     </td>
