--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -31,17 +31,18 @@
                     <div class="row">
                         <div class="col-sm-2 col-xs-2">
                             &nbsp;
-                        </div>
+                        </div> 
                         <div class="col-sm-3 col-xs-3">
                                 Login:
                         </div>
                         <div class="col-sm-5  col-xs-5">
-                            <cft-input errorMessage="Campo obrigatório e com 5 carateres" label="login do usuário">
+                            <cft-input errorMessage="Campo obrigatório e com 6 carateres" label="login do usuário">
                                 <input name="US_USLOGIN" class="form-control" formControlName="US_USLOGIN" autocomplete="off" placeholder="Login">
                             </cft-input>
                         </div>
                         <div class="col-xs-12 col-sm-2" >
-                            <span class="help-block pull-right has-error-block" *ngIf="blnExisteLogin" style="color:red"><i class="fa fa-remove"></i> Login já existente</span>
+                            <!-- <span class="help-block pull-right has-error-block" *ngIf="usuarioForm.get('US_USLOGIN').hasError('loginInvalido') === 'VALID'" style="color:red"><i class="fa fa-remove"></i> Login já existente</span> -->
+                            <span class="help-block pull-right has-error-block" *ngIf="usuarioForm.get('US_USLOGIN').hasError('loginInvalido')" style="color:red"><i class="fa fa-remove"></i> Login já existente</span>
                           </div>
                     </div>
                     <div class="row">
@@ -105,6 +106,11 @@
                         <div class="col-sm-2 col-xs-2">
                             &nbsp;
                         </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-2 col-xs-2">
+                            &nbsp;
+                        </div>
                         <div class="col-sm-3 col-xs-3">
                             Email Usuário:
                         </div>
@@ -113,6 +119,10 @@
                                 <input name="US_USEMAIL" class="form-control" formControlName="US_USEMAIL" autocomplete="off" placeholder="Email Usuário">
                             </cft-input>
                         </div>
+                        <div class="col-xs-12 col-sm-2" >
+                            <!-- <span class="help-block pull-right has-error-block" *ngIf="usuarioForm.get('US_USLOGIN').hasError('loginInvalido') === 'VALID'" style="color:red"><i class="fa fa-remove"></i> Login já existente</span> -->
+                            <span class="help-block pull-right has-error-block" *ngIf="usuarioForm.get('US_USEMAIL').hasError('emailInvalido')" style="color:red"><i class="fa fa-remove"></i> Email já existente</span>
+                          </div>
                     </div>
                 
                     <div class="row">
