--- a/src/app/clube/clube-list/clube-list.component.html
+++ b/src/app/clube/clube-list/clube-list.component.html
@@ -13,16 +13,28 @@
       &nbsp;
   </div>
 </div>
+<div class="row">
+  <div class="col-sm-2 col-xs-2">
+      &nbsp;
+  </div>
+</div> 
 
 <div class="row">
-  <div class="col-sm-3 col-xs-3">
+  <div class="col-sm-1 col-xs-1">&nbsp;</div>
+    <div class="col-sm-10 col-xs-10 badge badge-primary"> <h5> <img src="/assets/images/icons/clube1.png" class="mr-2" style="width: 30px"> Cadastro de Clubes </h5></div>
+</div>
+
+<div class="row ">
+
+  <div class="col-sm-1 col-xs-1">
     &nbsp;
   </div>
 
-  <div class="col-sm-7 col-xs-7 card bg-info text-red">
-    <div class="card-body">  <img src="/assets/images/icons/clube1.png" class="mr-2" style="width: 30px"> Cadastro de Clubes</div>
-    <div class="card">
-      <div class="card-body">
+  <!-- <div class="col-sm-7 col-xs-7 card bg-info text-red"> -->
+    
+    <!-- <div class="card">
+      <div class="card-body"> -->
+      <div class="col-sm-10 col-xs-10 border border-primary rounded shadow-lg p-4 mb-4 bg-white">
         <form>
           <div class="row">
             <div class="form-group form-inline">
@@ -43,7 +55,7 @@
           
 
           <div class="row">
-            <div class="col-sm-12 col-xs-12">
+            <div class="col-sm-12 col-xs-12 table-responsive-xl">
               <table class="table table-striped col-sm-12 col-xs-12">
                 <thead>
                 <tr>
@@ -106,9 +118,8 @@
           </div>
         </form>
 
-        <a href="#" tooltips tooltip-template="tooltip">Tooltip me</a>
       </div>
-    </div>
-  </div>
+    <!-- </div>  -->
+  <!-- </div> -->
 </div>
 <router-outlet></router-outlet>        
