--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -13,6 +13,15 @@
         &nbsp;
     </div>
 </div>
+<div class="row">
+    <div class="col-sm-2 col-xs-2">
+        &nbsp;
+    </div>
+</div>
+<div class="row">
+    <div class="col-sm-2 col-xs-2">&nbsp;</div>
+    <div class="col-sm-8 col-xs-8 badge badge-primary"> <h5><img src="/assets/images/icons/user1.png" class="mr-2" style="width: 30px"> Cadastro de Usuários</h5></div>
+</div>
 
 
 
@@ -21,12 +30,10 @@
         &nbsp;
     </div> 
     
-{{usuarioForm.valid}}
-    <div class="col-sm-8 col-xs-8 card bg-info text-red">
-        <div class="card-body"><img src="/assets/images/icons/user1.png" class="mr-2" style="width: 30px"> Cadastro de Usuário</div>
-        <div class="card">
-            <div class="card-body">
-                <h4>Inserir usuário</h4>
+    <div class="col-sm-8 col-xs-8 border border-primary rounded shadow-lg p-4 mb-4 bg-white">
+        <!-- <div class="card">
+            <div class="card-body"> -->
+                <h4>Dados do Usuário</h4>
                 <form [formGroup]="usuarioForm" novalidate>        
                     <div class="row">
                         <div class="col-sm-2 col-xs-2">
@@ -43,7 +50,7 @@
                         <div class="col-xs-12 col-sm-2" >
                             <!-- <span class="help-block pull-right has-error-block" *ngIf="usuarioForm.get('US_USLOGIN').hasError('loginInvalido') === 'VALID'" style="color:red"><i class="fa fa-remove"></i> Login já existente</span> -->
                             <span class="help-block pull-right has-error-block" *ngIf="usuarioForm.get('US_USLOGIN').hasError('loginInvalido')" style="color:red"><i class="fa fa-remove"></i> Login já existente</span>
-                          </div>
+                          </div> 
                     </div>
                     <div class="row">
                         <div class="col-sm-2 col-xs-2">
@@ -54,7 +61,7 @@
                         </div>
                         <div class="col-sm-5  col-xs-5" >
                             <cft-input errorMessage="Campo obrigatório e com 6 carateres" label="Senha do usuário">
-                                <input name="US_USSENHA" class="form-control" formControlName="US_USSENHA" autocomplete="off" placeholder="Senha">
+                                <input type="password" name="US_USSENHA" class="form-control" formControlName="US_USSENHA" autocomplete="off" placeholder="Senha">
                             </cft-input>
                         </div>
                         <div class="col-xs-12 col-sm-2" >
@@ -70,7 +77,7 @@
                         </div>
                         <div class="col-sm-5  col-xs-5" >
                             <cft-input errorMessage="Campo obrigatório e com 6 carateres" label="Senha do usuário">
-                                <input name="US_USSENHA_CONFIRMA" class="form-control" formControlName="US_USSENHA_CONFIRMA" autocomplete="off" placeholder="Confirma Senha">
+                                <input type="password" name="US_USSENHA_CONFIRMA" class="form-control" formControlName="US_USSENHA_CONFIRMA" autocomplete="off" placeholder="Confirma Senha">
                             </cft-input>
                         </div>
                     </div>
@@ -162,8 +169,8 @@
                         &nbsp;
                     </div>
                     <div class="col-sm-8 col-xs-8">
-                        <button (click)="InserirUsuario(usuarioForm.value)"type="button" class="btn btn-primary pull-right btn-block" [disabled]="!usuarioForm.valid" >
-                            <i class="fa fa-user"></i> Inserir
+                        <button (click)="SalvarUsuario(usuarioForm.value)"type="button" class="btn btn-primary pull-right btn-block" [disabled]="!usuarioForm.valid" >
+                            <i class="fa fa-save"></i> Salvar
                         </button>
                     </div>
                     <div class="col-sm-3 col-xs-3" >
@@ -175,8 +182,8 @@
                         <span style="color: red;">{{message}}</span>
                     </div>
                 </div>
-            </div>
-        </div>
+            <!-- </div>
+        </div> -->
     </div>
 </div>
 
