--- a/src/app/usuario/troca-senha/troca-senha.component.html
+++ b/src/app/usuario/troca-senha/troca-senha.component.html
@@ -20,7 +20,7 @@
 </div>
 <div class="row">
     <div class="col-sm-2 col-xs-2">&nbsp;</div>
-    <div class="col-sm-8 col-xs-8 badge badge-primary"> <h5><img src="/assets/images/icons/user1.png" class="mr-2" style="width: 30px"> Cadastro de Usuários</h5></div>
+    <div class="col-sm-8 col-xs-8 badge badge-primary"> <h5><img src="/assets/images/icons/user1.png" class="mr-2" style="width: 30px"> Troca de Senha</h5></div>
 </div>
 
 
