--- a/src/app/usuario/reset-senha/reset-senha.component.html
+++ b/src/app/usuario/reset-senha/reset-senha.component.html
@@ -3,12 +3,26 @@
         <h5 class="modal-title"><img src="/assets/images/icons/resetSenha.png" class="mr-2" style="width: 30px"> Reset de Senha</h5>
     </div>
     <div class="modal-body">
-        <form [formGroup]="usuarioForm" novalidate>        
+        <form [formGroup]="usuarioForm" novalidate>     
+            <div class="row">
+                <div class="col-sm-1 col-xs-1">
+                    <img src="/assets/images/icons/information.png" class="mr-2" style="width: 30px">
+                </div>
+                <div class="col-sm-11 col-xs-11">
+                    Insira seu email cadastrado no sistema. Você receberá um link do email para efetuar a troca da senha.
+                </div>
+            </div>   
+            <div class="row">
+                <div class="col-sm-12 col-xs-12">
+                    &nbsp;
+                </div>
+            </div> 
             <div class="row">
                 <div class="col-sm-1 col-xs-1">
                     &nbsp;
                 </div>
                 <div class="col-sm-4 col-xs-4">
+                    
                     Email Usuário:
                 </div>
                 <div class="col-sm-7 col-xs-7" >
