--- a/src/app/competicao/competicao.component.html
+++ b/src/app/competicao/competicao.component.html
@@ -18,7 +18,7 @@
         &nbsp;
     </div>
 </div>
-
+ 
 <div class="row">
     <div class="col-sm-2 col-xs-2">&nbsp;</div>
     <div class="col-sm-8 col-xs-8 badge badge-primary"> <h5><img src="/assets/images/icons/competicao.png" class="mr-2" style="width: 30px"> Cadastro de Competições </h5></div>
@@ -96,7 +96,7 @@
                 <div class="col-sm-5  col-xs-5" >
                     <div class="row">
                         <div class="col-sm-10  col-xs-10" >
-                            <input class="form-control" placeholder="yyyy-mm-dd" name="CP_CPDATALIMITEAPOSTA" ngbDatepicker #d1="ngbDatepicker" formControlName="CP_CPDATALIMITEAPOSTA" >
+                            <input class="form-control" placeholder="yyyy-mm-dd" name="dp" ngbDatepicker #d1="ngbDatepicker" formControlName="CP_CPDATALIMITEAPOSTA" >
                         </div>
                         <div class="col-sm-2  col-xs-2" >
                             <button class="btn btn-primary" (click)="d1.toggle()" type="button"><i class="fa fa-table "></i></button>
@@ -119,7 +119,7 @@
                 <div class="col-sm-5  col-xs-5" >
                     <div class="row">
                         <div class="col-sm-10  col-xs-10" >
-                            <input class="form-control" placeholder="yyyy-mm-dd" name="CP_CPDATAINICIO" ngbDatepicker #d="ngbDatepicker" formControlName="CP_CPDATAINICIO" >
+                            <input class="form-control" placeholder="yyyy-mm-dd" name="dp1" ngbDatepicker #d="ngbDatepicker" formControlName="CP_CPDATAINICIO" >
                         </div>
                         <div class="col-sm-2  col-xs-2" >
                             <button class="btn btn-primary" (click)="d.toggle()" type="button"><i class="fa fa-table "></i></button>
